--- a/site/src/views/products/productCart.ejs
+++ b/site/src/views/products/productCart.ejs
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <%- include('../partials/head') %>
 </head>
+
 <body class="productCart">
     <header>
         <%- include('../partials/header') %>
@@ -10,56 +12,96 @@
     <main>
         <h2>Mi carrito</h2>
         <div class="conteiner">
+            <% if (products.length != 0) { %>
             <section>
+                <div>
+                    <% products.forEach(product=> { %>
+                        <article class="movile">
+                            <div class="image">
+                                <a href="/products/detail/<%= product.product.id %> ">
+                                    <img src="/img/<%= product.product.images[0].file %> " alt="">
+                                </a>
+                            </div>
+                            <div class="name">
+                                <h4>
+                                    <%= product.product.name %>
+                                </h4>
+                            </div>
+                            <div class="amount">
+                                <h6>Cantidad:</h6>
+                                <div class="cantidad">
+                                    <p><%= product.amount %> </p>
+                                </div>
+                            </div>
+                            <div class="price">
+                                <h6>Precio</h6>
+                                <h6>$<%= product.product.price %>
+                                </h6>
+                            </div>
+                            <div class="sub-price">
+                                <h6>Sub-total</h6>
+                                <h6>$<%= product.product.price * product.amount %>
+                                </h6>
+                            </div>
+                            <div class="delate">
+                                <form action="/products/cart/<%= product.product.id %>?_method=DELETE" method="POST" id="delete">
+                                    <button type="submit">
+                                        <i class="fas fa-trash-alt"></i>
+                                    </button>
+                                </form>
+                            </div>
+                        </article>
+                        <% }) %>
+                </div>
                 <div class="titulo-columna">
                     <h4 class="producto">Producto</h4>
                     <h4>Cantidad</h4>
-                    <h4>precio</h4>
-                    <h4>Sub Total</h4>
+                    <h4 style="margin: auto;" >precio</h4>
+                    <h4 style="white-space: nowrap;" >Sub Total</h4>
                 </div>
-                <article>
-                    <h4>Producto</h4>
-                    <div class="img-detalles">
-                        <img src="/img/producto1.jpg" alt="">
-                        <p>nombre del producto/color/talle</p>
-                    </div>
-                    <h4>Cantidad</h4>
-                    <div class="cantidad">
-                        <p>1</p>
-                    </div>
-                    <h4>precio</h4>
-                    <h6>$9999,99</h6>
-                    <h5>$9999,99</h5>
-                    <div class="trash">
-                        <i class="fas fa-trash-alt"></i>
-                    </div>
-                </article>
-                <article>
-                    <h4>Producto</h4>
-                    <div class="img-detalles">
-                        <img src="/img/producto2.jpeg" alt="">
-                        <p>nombre del producto/color/talle</p>
-                    </div>
-                    <h4>Cantidad</h4>
-                    <div class="cantidad">
-                        <p>1</p>
-                    </div>
-                    <h4>precio</h4>
-                    <h6>$9999,99</h6>
-                    <h5>$9999,99</h5>
-                    <div class="trash">
-                        <i class="fas fa-trash-alt"></i>
-                    </div>
-                </article>
+                <div>
+                    <% products.forEach(product=> { %>
+                        <article class="desktop">
+                            <div class="image">
+                                <a href="/products/detail/<%= product.product.id %> ">
+                                    <img src="/img/<%= product.product.images[0].file %> " alt="">
+                                </a>
+                            </div>
+                            <div class="name">
+                                <h4>
+                                    <%= product.product.name %>
+                                </h4>
+                            </div>
+                            <div class="amount">
+                                <div class="cantidad">
+                                    <p><%= product.amount %> </p>
+                                </div>
+                            </div>
+                            <div class="price">
+                                <h6>$<%= product.product.price %></h6>
+                            </div>
+                            <div class="sub-price">
+                                <h6>$<%= product.product.price * product.amount %></h6>
+                            </div>
+                            <div class="delate">
+                                <form action="/products/cart/<%= product.product.id %>?_method=DELETE" method="POST" id="delete">
+                                    <button type="submit">
+                                        <i class="fas fa-trash-alt"></i>
+                                    </button>
+                                </form>
+                            </div>
+                        </article>
+                        <% }) %>
+                </div>
                 <div class="precio-total">
                     <h5>Total (sin envio)</h5>
-                    <p>$9999.99</p>
+                    <h5>$<%= total.reduce((a, b) => a + b, 0) %> </h5>
                 </div>
             </section>
             <aside>
                 <h3>Datos Del Envío</h3>
                 <hr>
-                <form action="">
+                <form action="/products/cart/end" method="post" id="compra">
                     <div class="metodo-de-envio">
                         <label for="metodo-de-envio">Metodo De Envío</label>
                         <p>
@@ -76,63 +118,22 @@
                         </p>
                     </div>
                     <div class="datos-del-envio">
-                        <h4>Completa tus Datos</h4>
-                        <ul>
-                            <li>
-                                <label for="nombre">Nombre/s</label>
-                                <input type="text" name="nombre" id="name">
-                            </li>
-                            <li>
-                                <label for="Apellido">Apellido/s</label>
-                                <input type="text" name="Apellido" id="apellido">
-                            </li>
-                            <li>
-                                <label for="dni/cuil">Dni/Cuil</label>
-                                <input type="number" name="dni/cuil" id="dni/cuil">
-                            </li>
-                            <li>
-                                <label for="calle">Calle</label>
-                                <input type="text" name="calle" id="calle">
-                            </li>
-                            <li>
-                                <label for="piso/dpto">Piso/Dpto</label>
-                                <input type="number" name="piso/dpto" id="piso/dpto">
-                            </li>
-                            <li>
-                                <label for="codigo-postal">Codigo Postal</label>
-                                <input type="number" name="codigo-postal" id="codigo-postal">
-                            </li>
-                            <li>
-                                <label for="provincia">Provincia</label>
-                                <input type="text" name="provincia" id="provincia">
-                            </li>
-                            <li>
-                                <label for="localidad">Localidad</label>
-                                <input type="text" name="localidad" id="localidad">
-                            </li>
-                            <li>
-                                <label for="telefono">Telefono</label>
-                                <input type="tel" name="telefono" id="telefono">
-                            </li>
-                            <li>
-                                <label for="celular">Celular</label>
-                                <input type="tel" name="celular" id="celular">
-                            </li>
-                            <li>
-                                <label for="comentario">Comentario Opcional</label>
-                                <textarea name="comentario" id="comentario" cols="22" rows="2"></textarea>
-                            </li>
-                            <li>
-                                <button type="submit">Comprar</button>
-                            </li>
-                        </ul>
+                        <button type="submit">
+                            <p>Comprar</p>
+                        </button>
                     </div>
                 </form>
             </aside>
+            <% } else {%>
+                <span>Todavia no agregaste productos a tu carrito</span>
+            <% } %>
         </div>
     </main>
     <footer>
         <%- include('../partials/footer') %>
     </footer>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="/javascripts/cart.js"></script>
 </body>
+
 </html>
