--- a/site/src/views/products/productDetail.ejs
+++ b/site/src/views/products/productDetail.ejs
@@ -39,17 +39,17 @@
                         <h3>$<%= product.price %> </h3>
                     </div>
                     <div class="seccion2">
-                        <form action="resultado.html" method="POST">
+                        <form action="/products/cart/add/<%= product.id %> " method="post">
                             <% if (product.sizes.length !== 0) { %>
                                 <h4>talle:</h4> 
-                                <select>
+                                <select name="size">
                                     <% product.sizes.forEach(size => { %>
                                     <option value="<%= size.size %>"><%= size.size %> </option>
                                     <% }) %>
                                 </select>
                             <% } %>
                             <h4>cantidad:</h4>
-                            <select>
+                            <select name="amount">
                                 <option value=1>1</option>
                                 <option value=2>2</option>
                                 <option value=3>3</option>
@@ -61,7 +61,7 @@
                                 <option value=9>9</option>
                                 <option value=10>10</option>
                             </select>
-                            <button class="agregar">
+                            <button type="submit" class="agregar">
                                 <p>Agregar al carrito</p>
                             </button>
                         </form>
