--- a/site/public/css/login.css
+++ b/site/public/css/login.css
@@ -67,6 +67,10 @@
     padding: 0;
 }
 
+.login main .form-label{
+    margin-top: 10px;
+}
+
 @media (min-width: 480px){
     /* section */
 
@@ -86,7 +90,7 @@
         justify-content: center;
         font-size: 70px;
         color: var(--color-4);
-        border-top: 1px solid var(--color-3);
+        border-top: 1px solid var(--color-4);
         margin-top: 70px;
         padding: 20px;
     }
