--- a/site/public/css/register.css
+++ b/site/public/css/register.css
@@ -66,6 +66,16 @@
     font-size: 14px;
 }
 
+.register #preview{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    padding: 5px;
+}
+
 @media (min-width: 480px){
     /* section */
 
