--- a/site/src/views/users/edit.ejs
+++ b/site/src/views/users/edit.ejs
@@ -14,26 +14,32 @@
         <div>
             <h6>Datos de usuario</h6>
         </div>
-        <form action="/users/edit/<%= user.id %>?_method=PUT" method="POST" enctype="multipart/form-data">
+        <form action="/users/edit/<%= user.id %>?_method=PUT" method="POST" enctype="multipart/form-data" id="profile-edit">
             <div class="mb-3">
-                <label for="exampleInputName1" class="form-label">Nombre</label>
-                <input type="text" name="name" value="<%= user.name %>" class="form-control" id="exampleInputName1" aria-describedby="emailHelp">
+                <label for="name" class="form-label">Nombre</label>
+                <input type="text" name="name" value="<%= user.name %>" class="form-control" id="name" aria-describedby="emailHelp">
+                <span id="error-name" class="text-danger" style="font-size: small;"><%= locals.errores && errores.name ? errores.name.msg : null %> </span> 
               </div>
             <div class="mb-3">
-                <label for="exampleInputLastName1" class="form-label">Apellido</label>
-                <input type="text" name="last_name" value="<%= user.last_name %>" class="form-control" id="exampleInputLastName1" aria-describedby="emailHelp">
+                <label for="last_name" class="form-label">Apellido</label>
+                <input type="text" name="last_name" value="<%= user.last_name %>" class="form-control" id="last_name" aria-describedby="emailHelp">
+                <span id="error-last_name" class="text-danger" style="font-size: small;"><%= locals.errores && errores.last_name ? errores.last_name.msg : null %> </span> 
               </div>
             <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label">Nueva contraseña</label>
-              <input type="password" name="newPassword" class="form-control" id="exampleInputPassword1">
+              <label for="newPassword" class="form-label">Nueva contraseña</label>
+              <input type="password" name="newPassword" class="form-control" id="newPassword">
+              <span id="error-newPassword" class="text-danger" style="font-size: small;"><%= locals.errores && errores.newPassword ? errores.newPassword.msg : null %> </span> 
             </div>
             <div class="mb-3">
-                <label for="exampleInputPhoneNumber1" class="form-label">Número de telefono</label>
-                <input type="number" name="number"  value="<%= user.number %>" class="form-control" id="exampleInputPhoneNumber1" aria-describedby="emailHelp">
+                <label for="number" class="form-label">Número de telefono</label>
+                <input type="number" name="number"  value="<%= user.number %>" class="form-control" id="number" aria-describedby="emailHelp">
+                <span id="error-number" class="text-danger" style="font-size: small;"><%= locals.errores && errores.number ? errores.number.msg : null %> </span> 
               </div>
               <div class="mb-3">
-                <label for="formFile" class="form-label">Avatar</label>
-                <input class="form-control" type="file" name="image" id="formFile" accept="image/*">
+                <label for="image" class="form-label">Avatar</label>
+                <input class="form-control" type="file" name="image" id="image" accept="image/*">
+                <div id="preview"></div>
+                <span id="error-image" class="text-danger" style="font-size: small;"><%= locals.errores && errores.image ? errores.image.msg : null %> </span> 
               </div>
             <div style="justify-content: center; flex-direction: column; align-items: center;"><button type="submit" class="btn btn-primary" style="margin: 0px auto; display: flex; justify-content: center; flex-direction: column; align-items: center;">Guardar cambios</button></div>
           </form>
@@ -44,6 +50,7 @@
     <footer>
         <%- include('../partials/footer') %>
     </footer>
+    <script src="/javascripts/profileEdit.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 
