--- a/site/src/views/users/register.ejs
+++ b/site/src/views/users/register.ejs
@@ -74,6 +74,7 @@
               <div class="mb-3">
                 <label for="file-input" class="form-label">Avatar</label>
                 <input class="form-control" type="file" name="image" id="file-input">
+                <div id="preview"></div>
                 <% if (locals.errors) { %>
                     <% errors.forEach(error => { %>
                        <span><%- error.param === "image" ? error.msg : null %> </span>
