--- a/site/src/views/users/profile.ejs
+++ b/site/src/views/users/profile.ejs
@@ -21,7 +21,7 @@
             <div> <%= user.name%> </div>
         <h5>Apellido</h5>
             <div><%= user.last_name %></div>
-        <h5>email</h5>
+        <h5>Email</h5>
             <div style="text-transform: lowercase"><%=user.email %></div>
         <h5>Número de teléfono</h5>
             <div><%= user.number %></div>
